Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             Select all squares with <br><strong style="font-size: 16px;">the cutest person alive</strong>
         </div>
         <div class="grid">
-            <img src="YOUR_PIC_1.jpg" onclick="this.classList.toggle('selected')">
-            <img src="YOUR_PIC_2.jpg" onclick="this.classList.toggle('selected')">
-            <img src="YOUR_PIC_3.jpg" onclick="this.classList.toggle('selected')">
+            <img src="pic5.jpg" onclick="this.classList.toggle('selected')">
+            <img src="pic6.jpg" onclick="this.classList.toggle('selected')">
+            <img src="pic7.jpg" onclick="this.classList.toggle('selected')">
             <img src="https://via.placeholder.com/150/f06" onclick="this.classList.toggle('selected')">
-            <img src="YOUR_PIC_4.jpg" onclick="this.classList.toggle('selected')">
+            <img src="pic2.jpg" onclick="this.classList.toggle('selected')">
             <img src="https://via.placeholder.com/150/ccc" onclick="this.classList.toggle('selected')">
         </div>
         <button class="verify-btn" onclick="showValentine()">Verify</button>
