Replace placeholder images with actual images

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <img src="pic5.jpg" onclick="this.classList.toggle('selected')">
             <img src="pic6.jpg" onclick="this.classList.toggle('selected')">
             <img src="pic7.jpg" onclick="this.classList.toggle('selected')">
-            <img src="https://via.placeholder.com/150/f06" onclick="this.classList.toggle('selected')">
+            <img src="pic1.jpg" onclick="this.classList.toggle('selected')">
             <img src="pic2.jpg" onclick="this.classList.toggle('selected')">
-            <img src="https://via.placeholder.com/150/ccc" onclick="this.classList.toggle('selected')">
+            <img src="pic4.jpg" onclick="this.classList.toggle('selected')">
         </div>
         <button class="verify-btn" onclick="showValentine()">Verify</button>
     </div>
